# 2a-parser

./: Cargo.toml  README.md  mrasm.pest
programs/: 00-SS19-5-example.asm  01-SS17-5-a2a.asm  02-SS17-5-a2b.asm  03-SS17-5-a2c.asm
src/: asm.rs  lib.rs  main.rs  parser.rs
src/asm/: display.rs  format.rs  mod.rs  trait_impls.rs
src/parser/: error.rs  mod.rs  tests.rs
tests/: 01-empty-line-before-mrasm.mrasm  02-comment-before-mrasm.mrasm  03-comment-in-mrasm.mrasm  04-multiple-labels-to-the-same-address.mrasm  05-same-labels-different-address.mrasm  06-all-instructions.mrasm  07-test-dst-src.mrasm
