[package]
name = "asm_parser"
version = "0.1.0"
authors = ["Malte Tammena <malte.tammena@gmx.de>"]
edition = "2018"

[lib]
name = "asm_parser"
path = "src/lib.rs"

[[bin]]
name = "asm_parser_bin"
path = "src/main.rs"
required-features = ["formatting"]

[dependencies]
pest = "2.1"
pest_derive = "2.1"
failure = "0.1"
pad = { version = "0.1", optional = true }
colored = { version = "1.7", optional = true }

[features]
# Implement fancy std::fmt::Display for Asm type
formatting = ["pad", "colored"]
